fixed navbar issue on mobile making screen too wide

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -221,6 +221,7 @@ h2 {
     font-size: 18px;
     color: #00c5ff !important;
     padding: 0px !important;
+    max-width: 350px;
   }
 }
 
